--- a/web/package.json
+++ b/web/package.json
@@ -1,13 +1,17 @@
 {
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack --watch"
+    "build": "webpack --mode production",
+    "dev": "webpack --watch --mode development"
   },
   "dependencies": {
     "@fontsource/open-sans": "^4.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.17.0",
+    "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "^4.5.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.0"
