--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,18 @@
     "dev": "webpack --watch --mode development"
   },
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@fontsource/open-sans": "^4.0.1",
+    "babel-loader": "^8.2.2",
+    "chart.js": "^3.0.0-beta.7",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.8.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
     "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "^4.5.0",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
