--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
 		"build": "snowpack build"
 	},
 	"devDependencies": {
-		"chart.js": "^3.0.0-beta.8",
+		"chart.js": "^2.9.4",
 		"eslint": "^7.17.0",
 		"snowpack": "^3.0.10"
 	}
